--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# Text Editor backups
-*.swp
-*~
+# Prerequisites
+*.d
 
 # Compiled Object files
 *.slo
@@ -8,24 +7,26 @@
 *.o
 *.obj
 
+# Precompiled Headers
+*.gch
+*.pch
+
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
+
+# Fortran module files
+*.mod
+*.smod
 
 # Compiled Static libraries
 *.lai
 *.la
 *.a
 *.lib
-.lib/
-
-# Qt Mocs
-moc_*
 
 # Executables
 *.exe
 *.out
 *.app
-
-
